Distortion支持
# Conflicts:
#	build.gradle
#	common/src/main/java/mod/chloeprime/aaaparticles/client/Debug.java
#	common/src/main/java/mod/chloeprime/aaaparticles/client/loader/EffekAssetLoader.java
#	forge/src/main/java/mod/chloeprime/aaaparticles/forge/AAAParticlesForgeClient.java